[project]
name = "rgc-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "readlif>=0.6.5",
    "matplotlib>=3.10.1",
    "tifffile>=2025.3.13",
    "skimage",
    "scikit-image",
    "cellpose",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
